--- a/Gaggle/gradle/libs.versions.toml
+++ b/Gaggle/gradle/libs.versions.toml
@@ -19,6 +19,7 @@ imagepicker = "v2.1"
 picasso = "2.8"
 navigationFragment = "2.8.9"
 navigationUi = "2.8.9"
+safe-args = "2.7.7"
 
 [libraries]
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
@@ -49,6 +50,7 @@ material = { group = "com.google.android.material", name = "material", version.r
 identity-jvm = { group = "com.android.identity", name = "identity-jvm", version.ref = "identityJvm" }
 androidx-navigation-fragment = { group = "androidx.navigation", name = "navigation-fragment", version.ref = "navigationFragment" }
 androidx-navigation-ui = { group = "androidx.navigation", name = "navigation-ui", version.ref = "navigationUi" }
+#androidx-navigation-safeargs = { group = "androidx.navigation", name="navigation-safe-args-gradle-plugin", version.ref = "safe-args" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
