--- a/Gaggle/app/src/main/AndroidManifest.xml
+++ b/Gaggle/app/src/main/AndroidManifest.xml
@@ -15,17 +15,6 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Gaggle"
         tools:targetApi="31">
-        <activity android:name=".GoalInputActivity" />
-
-<!--        <activity-->
-<!--            android:name=".SplashActivity"-->
-<!--            android:exported="true"-->
-<!--            android:theme="@style/Theme.Gaggle.Splash">-->
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
-<!--        </activity>-->
 
         <activity
             android:name=".MainActivity"
@@ -39,6 +28,7 @@
             </intent-filter>
         </activity>
         <activity android:name=".HomeActivity"/>
+        <activity android:name=".ConfettiActivity"/>
     </application>
 
 </manifest>
